--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "next start -p $PORT",
     "heroku-postbuild": "next build",
-    "dev": "node server.js"
+    "dev": "node server.js",
+    "hero": "heroku login"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
   "homepage": "https://github.com/LEscobar-Driver/MyWebsite#readme",
   "dependencies": {
     "fs-extra": "^7.0.1",
+    "heroku": "^7.33.3",
     "next": "^4.2.3",
     "next-routes": "^1.4.2",
     "react": "^16.7.0",
