--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "next start -p $PORT",
     "heroku-postbuild": "next build",
-    "dev": "node server.js"
+    "dev": "NODE_ENV=development node server.js"
   },
   "repository": {
     "type": "git",
