--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "next start -p $PORT",
     "heroku-postbuild": "next build",
-    "dev": "node server.js"
+    "dev": "node server.js",
+    "build": "next build"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
     "fs-extra": "^7.0.1",
     "heroku": "^7.33.3",
     "next": "^4.2.3",
+    "next-config": "^0.1.0",
     "next-routes": "^1.4.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
