--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
   "dependencies": {
     "fs-extra": "^7.0.1",
     "heroku": "^7.33.3",
-    "next": "^9.2.0",
+    "next": "^9.3.4",
     "next-routes": "^1.4.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-pdf": "^4.1.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.84.0"
   }
